<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/loginPocketbookLogo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_vector"
        android:contentDescription="@string/pocketbook" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="69dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toStartOf="@+id/loginEmailContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPocketbookLogo" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/loginEmailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPocketbookLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailField"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_gravity="center"
            android:layout_marginStart="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="47dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_password"
        app:layout_constraintEnd_toStartOf="@+id/loginPasswordContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordField"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginStart="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_round_btn_accent"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordContainer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn">

        <Button
            android:id="@+id/RegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:text="@string/new_to_pocketbook"
            android:textColor="@color/colorUnselected"
            android:textSize="14sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/loginSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@null"
            android:maxLines="1"
            android:letterSpacing="0.02"
            android:text="@string/signUp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>