...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
...
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/searchFragTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/searchFragPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_topbar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.viewpager2.widget.ViewPager2
...
